--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 
 	<groupId>com.github.solairerove</groupId>
-	<artifactId>oopt-murmansk-parser</artifactId>
+	<artifactId>oopt-murmansk</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>oopt-murmansk-parser</name>
+	<name>oopt-murmansk</name>
 	<description>Demo project for OOPT statistics parser</description>
 
 	<url>https://github.com/solairerove/oopt-murmansk</url>
